<resources>
    <!--tela inicial-->
    <string name="titulo_tela">Choose a option</string>
    <string name="titulo_med">Medicaments</string>
    <string name="titulo_alim">Foods</string>

    <!--usuario-->
    <string name="nome_usuario">Name</string>
    <string name="nome_usuario_hint">Enter your name</string>
    <string name="sobrenome_usuario">Enter your first name</string>
    <string name="sobrenome_usuario_hint">Last name</string>
    <string name="data_nascimento_usuario">Enter your last name</string>
    <string name="data_nascimento_usuario_hint">Birthday</string>
    <string name="sexo_usuario">Enter your gender</string>
    <string name="sexo_usuario_hint">Gender</string>
    <string name="sexo_masculino">Male</string>
    <string name="sexo_feminino">Female</string>
    <string name="sexo_nao_informado">uninformed sex</string>
    <string name="telefone_usuario">Phone number</string>
    <string name="telefone_usuario_hint">Phone number</string>
    <string name="email_usuario">Email</string>
    <string name="email_usuario_hint">Email</string>


    <!--Medicamentos-->
    <string name="app_name">Cholesterol control</string>
    <string name="medicamentos">Medicaments</string>
    <string name="nome_med">Name</string>
    <string name="nome_med_hint">Enter the name of the medicine</string>
    <string name="dias">How many days</string>
    <string name="dias_hint">How many day should you take the medicine</string>
    <string name="intervalo">Hour interval</string>
    <string name="intervalo_hint">How many in how many hours should you take the medicine</string>
    <string name="tratamento">Treatment</string>
    <string name="tratamento_hint">Tell us which treatment is indicated by the doctor</string>
    <string name="doenca">Treatment disease</string>
    <string name="botao_limpar">Clear</string>
    <string name="botao_salvar">Save</string>

    <!--Alimentos-->
    <string name="alimentos">Foods</string>
    <string name="nome_alim">Name</string>
    <string name="nome_alim_hint">Food name</string>
    <string name="qualidade_alim">Check below if the food is considered good for health</string>
    <string name="alimento_bom">Good</string>
    <string name="alimento_ruim">Bad</string>
    <string name="colesterol">Cholesterol</string>
    <string name="outras">Others</string>
    <string name="infomar_meus_dados">Info my data</string>
    <string name="descricao_alim">Make a brief description of the food or use to add some special recipe</string>
    <string name="consumo_diario">What is the daily amount indicated</string>
    <string name="consumo_diario_hint">Ex: 100 grams</string>
    <!--    botoes-->
    <string name="editado_com_sucesso">Successfully edited</string>
    <string name="salvo_com_sucesso">Saved successfully</string>
    <string name="limpo_com_sucesso">Clean fields</string>

    <string name="banana">Banana</string>
    <string name="descricao_banana">
Because it is rich in B vitamins - four are present in bananas: B1, B2, B6 and B12 - this fruit directly helps the nervous system. The banana contains a lot of iron, which stimulates the production of hemoglobin. Therefore, including your consumption in the diet is an efficient way to help fight anemia.
    </string>

    <string name="maca">Apple</string>
    <string name="descricao_maca">
Apples contain powerful nutrients that boost the immune system. They have fibers that help transport waste out of the body. In addition, the fruit is a source of vitamin C that helps the body to develop resistance. Thus, it protects the body from diseases such as colds and flu
    </string>

    <string name="abacaxi">Pineapple</string>
    <string name="descricao_abacaxi">
The pineapple (Ananas comosus) has several nutrients that help to prevent diseases and keep health up to date. The fruit has vitamins A, C, B1, B2, B3, B5, B6, B9, manganese, magnesium and potassium, in addition to having a very important active compound called bromelain.
    </string>

    <string name="salada_de_alface">Lettuce salad</string>
    <string name="descricao_salada_de_alface">
Lettuce has vitamins A, C, K, fibers, antioxidants, magnesium and potassium that are essential for the proper functioning of the immune system.
    </string>

    <string name="salada_de_tomate">Tomato salad</string>
    <string name="descricao_salada_de_tomate">
Although normally used as a vegetable in salads and hot dishes, tomatoes are a fruit. Widely used in weight loss diets, each unit has only 25 calories and diuretic properties, in addition to vitamin C, which improves the immune system and the absorption of iron in meals.
    </string>

    <integer name="banana_id">1</integer>
    <integer name="abacaxi_id">2</integer>
    <integer name="maca_id">3</integer>
    <integer name="salada_de_tomate_id">4</integer>
    <integer name="salada_de_alface_id">5</integer>
    <integer name="batata_id">6</integer>
    <integer name="cenoura_id">7</integer>
    <integer name="laranja_id">8</integer>
    <integer name="abacate_id">9</integer>
    <integer name="soja_id">10</integer>

    <string name="banana_consumo">100 grams</string>
    <string name="abacaxi_consumo">80 grams</string>
    <string name="maca_consumo">50 grams</string>
    <string name="salada_de_tomate_consumo">50 grams</string>
    <string name="salada_de_alface_consumo">30 grams</string>
    <string name="batata_consumo">100 grams</string>
    <string name="cenoura_consumo">80 grams</string>
    <string name="laranja_consumo">30 grams</string>
    <string name="abacate_consumo">150 grams</string>
    <string name="soja_consumo">100 grams</string>

    <string name="banana_qualidade">@string/alimento_bom</string>
    <string name="abacaxi_qualidade">@string/alimento_bom</string>
    <string name="maca_qualidade">@string/alimento_bom</string>
    <string name="salada_de_tomate_qualidade">@string/alimento_bom</string>
    <string name="salada_de_alface_qualidade">@string/alimento_bom</string>
    <string name="batata_qualidade">@string/alimento_bom</string>
    <string name="cenoura_qualidade">@string/alimento_bom</string>
    <string name="laranja_qualidade">@string/alimento_bom</string>
    <string name="abacate_qualidade">@string/alimento_bom</string>
    <string name="soja_qualidade">@string/alimento_bom</string>

    <string name="foi_clicado">" clicked!"</string>
    <string name="batata">Potato</string>
    <string name="cenoura">carrot</string>
    <string name="laranja">orange</string>
    <string name="abacate">avocado</string>
    <string name="soja">spy</string>

    <string name="descricao_batata">Additionally, potatoes are a good source of vitamin C and some B vitamins, especially niacin, thiamine and vitamin B6 (Table 2). Among the energy foods, the potato is the richest in niacin. Potatoes are still a reasonable source of iron, as well as phosphorus and magnesium and an excellent source of potassium.</string>
    <string name="descricao_cenoura">Carrots are already part of the Brazilian diet in various preparations and are very important for our health. They are good sources of mineral salts, such as iron and calcium, vitamins K, A, C, E, of the B complex, in addition to manganese, potassium and fibers</string>
    <string name="descricao_laranja">Oranges are a delicious fruit with a spicy flavor and an edifying smell. They are composed of vitamins A, B and C, calcium, magnesium, potassium, phosphorus, choline and other nutrients. In addition, the fruit has more than 170 phytochemicals and more than 60 flavonoids with strong anti-inflammatory and antioxidant effects.</string>
    <string name="descricao_abacate">In 100 g of food, there are 96 calories and 8.4 g of fat. In addition, it contains fiber, complex vitamins B, K and C, in addition to potassium and copper. There are many different types of avocados, varying in color, size and shape.</string>
    <string name="descricao_soja">It has a high protein value, is rich in iron, calcium, zinc, potassium, vitamin E and fiber - important nutrients for our health. For a time, soy was seen as a “miracle grain”, which could prevent several diseases, such as cardiovascular diseases, high cholesterol, osteoporosis, diabetes and even cancer.</string>
    <string name="consumo">"Consume: "</string>
    <string name="qualidade">"Quality: "</string>
    <string name="descricao">"Description: "</string>
    <string name="title_activity_alimentos_adapter">Foods</string>

    <string name="autoria">Authorship</string>
    <string name="autoria_nome">"Name: "</string>
    <string name="autoria_curso">"Course: "</string>
    <string name="autoria_email">"Email: "</string>
    <string name="autoria_descricao">"Description of the application: "</string>
    <string name="autoria_curso_desc">UTFPR</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="menu">Main menu</string>
    <string name="menu_principal">Main menu</string>
    <string name="erro_interno_tente_mais_tarde">Internal error, try later</string>
    <string name="cadastro">Register</string>
    <string name="editando">"Editing "</string>
    <string name="novo">"new "</string>
    <string name="codigo">Code</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="informe_o_nome_do_alimento">Enter the name of the food</string>
    <string name="id">"Id: "</string>
    <string name="lista_de_alimentos">Food list</string>
    <string name="modo_noturno">Night mode</string>
    <string name="preferencias">App preferences</string>
    <string name="sair">Go out</string>
    <string name="IrParaPreferencias">Preferences</string>
    <string name="preferencias_salvas">Preferences saved successfully!</string>
    <string name="buscando">"Searching "</string>
    <string name="frutas">fruits</string>
    <string name="verduras">vegetables</string>
    <string name="categoria">Category</string>
    <string name="categoria_nome">Description</string>
    <string name="lista_de_categorias">Categories list</string>
    <string name="deve_ser_preenchido">required</string>
    <string name="informe_qual_categoria">Tell us which category</string>
    <string name="salvar_categoria">Save</string>
    <string name="sair_categoria">Close</string>
    <string name="escolha_uma_categoria">Choose a category</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="confirmacao">Confirmation</string>
    <string name="nova_categoria">New category</string>
    <string name="categoria_nao_pode_ser_excluida">This category is already being used by other foods, it is not possible to exclude</string>
    <string name="preferencias_usuario">User preferences</string>
    <string name="deletando">"Deleting: "</string>
    <string name="deseja_continuar">, do you wish to continue ?</string>
    <string name="informe_seu_email">Enter your email</string>
    <string name="informe_seu_telefone_celular">Enter your phone number</string>
    <string name="informe_sua_data_de_nascimento">ENter your birthday</string>
    <string name="informe_seu_sobrenome">Enter your last name</string>
    <string name="informe_seu_nome">Enter your first name</string>

    <integer name="frutasId">1</integer>
    <integer name="verdurasId">2</integer>

</resources>