<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuAddAlimento"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuIrTelaPrincipal"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_principal" />

    <item
        android:id="@+id/menuItemPreferencias"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/IrParaPreferencias"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSobreAutoria"
        android:title="@string/sobre" />
</menu>