<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layoutMedicamentos"
    android:layout_height="match_parent"
    tools:context=".MedicamentosActivity">


  <TextView
      android:id="@+id/textViewtTituloMedicamento"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/medicamentos"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textViewLabelNomeMedicamento"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:text="@string/nome_med"
      app:layout_constraintStart_toStartOf="@+id/textViewtTituloMedicamento"
      app:layout_constraintTop_toBottomOf="@+id/textViewtTituloMedicamento" />

  <EditText
      android:id="@+id/edNomeMed"
      android:layout_width="370dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/nome_med_hint"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/textViewLabelNomeMedicamento"
      app:layout_constraintTop_toBottomOf="@+id/textViewLabelNomeMedicamento" />

  <TextView
      android:id="@+id/textViewLabelTratamentoMed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/tratamento"
      app:layout_constraintStart_toStartOf="@+id/edNomeMed"
      app:layout_constraintTop_toBottomOf="@+id/edNomeMed" />

  <EditText
      android:id="@+id/edTratamentoMed"
      android:layout_width="370dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/tratamento_hint"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/textViewLabelTratamentoMed"
      app:layout_constraintTop_toBottomOf="@+id/textViewLabelTratamentoMed" />

  <TextView
      android:id="@+id/textViewLabelDiasMed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/dias"
      app:layout_constraintStart_toStartOf="@+id/edTratamentoMed"
      app:layout_constraintTop_toBottomOf="@+id/edTratamentoMed" />

  <EditText
      android:id="@+id/edDiasMed"
      android:layout_width="370dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/dias_hint"
      android:inputType="number"
      app:layout_constraintStart_toStartOf="@+id/textViewLabelDiasMed"
      app:layout_constraintTop_toBottomOf="@+id/textViewLabelDiasMed" />

  <TextView
      android:id="@+id/textViewLabelIntervaloMed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/intervalo"
      app:layout_constraintStart_toStartOf="@+id/edDiasMed"
      app:layout_constraintTop_toBottomOf="@+id/edDiasMed" />

  <EditText
      android:id="@+id/edIntervaloMed"
      android:layout_width="370dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/intervalo_hint"
      android:inputType="number"
      app:layout_constraintStart_toStartOf="@+id/textViewLabelIntervaloMed"
      app:layout_constraintTop_toBottomOf="@+id/textViewLabelIntervaloMed" />

  <!--  <Spinner-->
<!--      android:id="@+id/spDoenca"-->
<!--      android:layout_width="370dp"-->
<!--      android:layout_height="44dp"-->
<!--      android:onClick="mostrarDoencas"-->
<!--      android:spinnerMode="dialog"-->
<!--      app:layout_constraintStart_toStartOf="@+id/textView22"-->
<!--      app:layout_constraintTop_toBottomOf="@+id/textView22" />-->


</androidx.constraintlayout.widget.ConstraintLayout>