<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlimentosActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/alimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nome_alim"
        app:layout_constraintStart_toStartOf="@+id/textViewCodigo"
        app:layout_constraintTop_toBottomOf="@+id/textViewCodigo" />

    <EditText
        android:id="@+id/edNomeAlim"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/nome_alim_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:onClick="limparAlim"
        android:id="@+id/btLimparAlim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/botao_limpar"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="salvarAlim"
        android:id="@+id/btSalvarAlim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/botao_salvar"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/qualidade_alim"
        app:layout_constraintStart_toStartOf="@+id/edQuantidadeAlim"
        app:layout_constraintTop_toBottomOf="@+id/edQuantidadeAlim" />

    <CheckBox
        android:id="@+id/cbBomAlim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/alimento_bom"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descricao_alim"
        app:layout_constraintStart_toStartOf="@+id/edNomeAlim"
        app:layout_constraintTop_toBottomOf="@+id/edNomeAlim" />

    <EditText
        android:id="@+id/edDescricaoAlim"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="150dp"
        android:maxHeight="150dp"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/consumo_diario"
        app:layout_constraintStart_toStartOf="@+id/edDescricaoAlim"
        app:layout_constraintTop_toBottomOf="@+id/edDescricaoAlim" />

    <EditText
        android:id="@+id/edQuantidadeAlim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/consumo_diario_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textViewLabelCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/codigo"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textViewLabelCodigo"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelCodigo" />


</androidx.constraintlayout.widget.ConstraintLayout>