<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:gravity="center_horizontal"
        android:text="@string/titulo_tela"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:onClick="telaMedicamentos"
        android:id="@+id/btMed"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginTop="150dp"
        android:text="@string/titulo_med"
        app:backgroundTint="#FFC107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="telaListaAlimentos"
        android:id="@+id/btAlim"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/titulo_alim"
        app:backgroundTint="#009688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMed" />

    <Button
        android:id="@+id/btCadastrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:onClick="telaUsuario"
        android:text="@string/infomar_meus_dados"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="@+id/btAlim"
        app:layout_constraintTop_toBottomOf="@+id/btAlim" />

    <Button
        android:id="@+id/btAutoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginBottom="32dp"
        android:onClick="autoria"
        android:text="@string/autoria"
        android:textColor="#3F51B5"
        app:backgroundTint="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>